Changes
=======

Next
----

Breaking changes:

- Whether to print GeoJSON feature sequences or a GeoJSON feature collection
  from rio-shapes is now controlled by a ``--sequence/--collection`` option.
  A sequence is now the default (#927).
- Deprecated window functions have been removed from the rasterio module. Their
  replacements are in rasterio.windows (#1115).

New features:

- ``rasterio.features.dataset_features()`` has been extracted from
  rio-shapes (#1282, #1286).

Bug fixes:

- Added the missing w+ mode (#1309).
- Rotated datasets are now masked properly (#1240, #1278).
- Geometry collections are flattened in ``rasterize`` to work around
  incidental holes created by GDAL (#1253, #1274).
- Add missing support for Python geo protocol in features module (#1268,
  (#1269).
- ``mask()`` now takes the ``indexes`` keyword parameter that is common
  elsewhere in the package (#1224, #1225).
- Sharing of dataset handles may be disabled for multithreaded applications
  using the new `sharing` keyword argument of `rasterio.open` (#1260).
- ``WarpedVRT()`` properly sets a CRS on the internal VRT handle when
  that VRT is produced by ``GDALCreateVRT()`` (#1283).

1.0a12 (2017-12-01)
-------------------

New features:

- ``rasterio.open()`` now accepts URLs with GET parameters (#1121).
- Specific drivers and options can be used in ``rasterio.open()`` (#1000,
  #1158, #1196).
- ``rasterize()`` now supports GDAL's 'add' algorithm (#1195).
- GDAL version checking has been consolidated and improved (#1210).

Bug fixes:

- Pad boundless read VRTs so we don't overflow due to rounding (#1184).
- Boundless reads of WarpedVRTs are enabled by setting an effective crs
  (#1188).
- Raise ValueError when invalid width/height are passed to the
  ``InMemoryRaster`` constructor (#1144, #1194).
- GDAL errors that are turned into Rasterio exceptions are no longer also sent
  automatically to the logger. They may, of course, be logged by user code.