@@ -31,7 +31,7 @@ dtypes = ['complex', 'complex64', 'complex128']
 def test_read_array(tempfile, dtype, height, width):
     """_io functions read and write arrays correctly"""
     in_img = complex_image(height, width, dtype)
-    with rasterio.open(tempfile, 'w', driver='GTiff', dtype=dtype,
+    with rasterio.open(tempfile, 'w+', driver='GTiff', dtype=dtype,
                        height=height, width=width, count=1) as dataset:
         dataset.write(in_img, 1)
         out_img = dataset.read(1)
