@@ -12,6 +12,11 @@ Breaking changes:
 - Deprecated window functions have been removed from the rasterio module. Their
   replacements are in rasterio.windows (#1115).
 
+Upcoming deprecation:
+
+- Reading array data or masks from datasets opened in "w" mode will be
+  prohibited in Rasterio 1.0. We are warning about this now (#1309).
+
 New features:
 
 - ``rasterio.features.dataset_features()`` has been extracted from
